Added widget to show total products

--- a/SimpleStore.Presentation/Views/Product/Index.cshtml
+++ b/SimpleStore.Presentation/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<SimpleStore.Business.DTOs.ProductDto>
 
-<h2>Products</h2>
+<h2>Products (@ViewBag.TotalProducts)</h2>
 <p>
     <a asp-action="Create">Add Product</a>
 </p>
