Added product card

--- a/SimpleStore.Presentation/Views/Product/Index.cshtml
+++ b/SimpleStore.Presentation/Views/Product/Index.cshtml
@@ -51,3 +51,10 @@
         }
     </tbody>
 </table>
+
+<h2>Product list</h2>
+
+@foreach (var item in Model)
+{
+    @await Html.PartialAsync("_ProductCard", item)
+}
